zwave/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: zwavejs
  name: zwavejs
  namespace: hass
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: zwavejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zwavejs
    spec:
      containers:
      - image: zwavejs/zwave-js-ui:11.9.1
        name: zwavejs
        imagePullPolicy: IfNotPresent
        ports:
          - name: web
            containerPort: 8091
            protocol: TCP
          - name: websocket
            containerPort: 3000
            protocol: TCP
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
            squat.ai/zwave: 1
          requests:
            cpu: "1"
            memory: 400Mi 
        volumeMounts:
        - name: zwavejs-data
          mountPath: /usr/src/app/store
        - name: zwavestick
          mountPath: /dev/zwave
        livenessProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: Accept
              value: text/plain
            path: /health
            port: web
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            httpHeaders:
              - name: Accept
                value: text/plain
            path: /health
            port: web
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: zwavejs-data
        persistentVolumeClaim:
          claimName: zwavejs
      - name: zwavestick
        hostPath:
          path: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_487d938b7084ed11a17bd29f9d1cc348-if00-port0
          type: CharDevice
