zwave/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwavejs
  namespace: hass
  labels:
    app.kubernetes.io/name: zwavejs
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-casdoor-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zwavejs
                port:
                  number: 8091
  tls:
    - secretName: tls-certificate
      hosts:
        - mydomain.com
